Fix page shifting due to scroll bar.

--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,9 @@
     font-style: normal;
 }
 
-html {
-    overflow-y: scroll;
-}
-
 html, body {
     height: 100%;
+    overflow-y: scroll;
 }
 
 body {
